// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ellipsis Should not trim string if shorter than expected 1`] = `"Lorem"`;

exports[`Ellipsis Should trim long string 1`] = `"Lorem ipsum... dolor"`;

exports[`Model Analyser Should analyze missing array type 1`] = `
Array [
  Object {
    "issue": "ArrayTypeMissing",
    "location": "MyModel.dates",
  },
]
`;

exports[`Model Analyser Should analyze missing properties 1`] = `
Array [
  Object {
    "issue": "NoProperties",
    "location": "MyModel",
  },
]
`;

exports[`Model Analyser Should analyze missing property in array type 1`] = `
Array [
  Object {
    "issue": "TypeMissing",
    "location": "MyModel.date",
  },
]
`;

exports[`Model Analyser Should analyze missing property type 1`] = `
Array [
  Object {
    "issue": "TypeMissing",
    "location": "MyModel.date",
  },
]
`;

exports[`Model Analyser Should analyze missing property type in nested array model 1`] = `
Array [
  Object {
    "issue": "TypeMissing",
    "location": "ParentModel.date",
  },
]
`;

exports[`Model Analyser Should analyze missing property type in nested model 1`] = `
Array [
  Object {
    "issue": "TypeMissing",
    "location": "ParentModel.date",
  },
]
`;

exports[`Model Analyser Should skip cross reference type 1`] = `
Array [
  Object {
    "issue": "TypeMissing",
    "location": "ParentModel.date",
  },
]
`;

exports[`PrintTable Should able to print table 1`] = `
Array [
  Array [
    "1. John Subaru 60",
  ],
  Array [
    "2. John Subaru 60",
  ],
  Array [
    "3. John Subaru 60",
  ],
]
`;

exports[`PrintTable Should able to print table with algin right 1`] = `
Array [
  Array [
    "1. John Subaru  60",
  ],
  Array [
    "2. John Subaru 160",
  ],
  Array [
    "3. John Subaru  60",
  ],
]
`;

exports[`PrintTable Should not error when provided undefined value 1`] = `
Array [
  Array [
    "1. John Subaru 60",
  ],
  Array [
    "2. John Subaru   ",
  ],
  Array [
    "3. John Subaru 60",
  ],
]
`;
